--- a/src/app/team-roster/team-roster.component.css
+++ b/src/app/team-roster/team-roster.component.css
@@ -24,6 +24,7 @@
 
 .member-bio {
   font-size : 11pt;
+  margin-top : 2em;
 
 }
 
@@ -57,13 +58,8 @@
 .cardcontent {
 }
 
-.seelessbutton {
-  width: 100%;
-  height: 20px;
-  line-height: 20px;
-  min-height: 20px;
-  vertical-align: top;
-  font-size: 10px;
-  padding: 0 0;
-  margin: 0;
+.memberimg  {
+  width: 200px;
+  float: left;
+  margin-right: 20px;
 }
