--- a/src/app/team-roster/team-roster.component.html
+++ b/src/app/team-roster/team-roster.component.html
@@ -3,39 +3,15 @@
 
   <mat-card class="dashboard-card">
     <div fxLayout="row wrap" fxLayout.xs="column" fxLayoutAlign="center">
-      <mat-card *ngFor="let member of membersList" fxFlex="0 1 240px" class="member-card">
+      <mat-card *ngFor="let member of membersList" fxFlex="0 1 100%" class="member-card">
         <div class="cardcontent" [@cardState]="member.expanded">
-          <div fxLayout="column" fxLayoutAlign="center" *ngIf="!member.expanded_bool">
-            <img fxFlex="1 1"  src="{{member.image_src}}" style="width: 200px;">
-            <div fxFlex="1 1" class="member-name">
-              {{member.name}}
-            </div>
-            <div fxFlex="1 1" class="member-bio">
-              {{member.bio}}
-            </div>
-              <div  fxFlex="0 0"  class="seemorebutton-container">
-                <button mat-button class="seemorebutton"
-                        (click)="member.toggleState()">
-                  <mat-icon aria-label="Less about this sponsor">expand_less</mat-icon>
-                </button>
-              </div>
-            </div>
+          <img  src="{{member.image_src}}" class="memberimg">
 
-          <div fxLayout="column" fxLayoutAlign="center"  *ngIf="member.expanded_bool">
-            <div fxFlex="0 0" class="member-name">
-              {{member.name}}
+          <div class="member-name">
+            {{member.name}}  <mat-chip-list><mat-chip *ngIf="member.advisor">Advisor</mat-chip> </mat-chip-list>
             </div>
-            <div fxFlex="0 0" class="additional-info">
-              {{member.expanded_bio}}
+            <div class="member-bio" [innerHTML]="member.bio | sanitizeHtml2">
             </div>
-            <div fxFlex="1 1 100%"> </div>
-            <div fxFlex="0 0" class="seelessbutton-container">
-              <button mat-button class="seelessbutton"
-                      (click)="member.toggleState()">
-                <mat-icon aria-label="Less about this sponsor">expand_more</mat-icon>
-              </button>
-            </div>
-          </div>
 
         </div>
       </mat-card>
