--- a/src/app/reference-box/reference-sheet.html
+++ b/src/app/reference-box/reference-sheet.html
@@ -11,7 +11,7 @@ export class Reference {
 }
 -->
 <p class="mat-subheading-2">{{this.ref.journal}} <span style="position: absolute;
-    right: 5px;"> Ref. #  {{this.ref.index}} <button mat-icon-button (click)="this.bottomSheetRef.dismiss()">
+    right: 5px;">  [{{this.ref.index}}] :  {{this.ref.shorthand}} <button mat-icon-button (click)="this.bottomSheetRef.dismiss()">
     <mat-icon aria-label="Close reference sheet">close</mat-icon>
   </button></span></p>
 
