--- a/src/app/computing-section/computing-section.component.css
+++ b/src/app/computing-section/computing-section.component.css
@@ -17,4 +17,16 @@
 
 .screenshot {
   width: 100%;
+  margin-top : 1em;
+  margin-bottom : 1em;
+}
+
+.smallillus {
+  width: 30%;
+  float: right;
+}
+
+.textparagraph {
+  margin-bottom: 2em;
+  font-size: 14pt;
 }
