--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,65 @@
-<div class="grid-container">
+<div class="innercontainer">
+<img id="tuyaujaune" src="http://2018.igem.org/wiki/images/7/76/T--GO_Paris-Saclay--tuyau_jaune.png"alt="tuyau jaune">
+
+
+<img id="carre_blanc" src="http://2018.igem.org/wiki/images/3/38/T--GO_Paris-Saclay--carre_blanc.png"alt="carre_blanc">
+
+<img id="methotrexit" src="
+http://2018.igem.org/wiki/images/2/28/T--GO_Paris-Saclay--methotrexittire.png
+"alt="titre logo methotrexit">
+
+<h2 id="sous_titre">Heterogen<img class="idea" src="http://2018.igem.org/wiki/images/c/c6/T--GO_Paris-Saclay--idea.png"alt="idea">ous Cleaning Factory</h2>
+
+
+<img id="carre" src="http://2018.igem.org/wiki/images/5/5f/T--GO_Paris-Saclay--carre_colore.png"      alt="carres_multicolores">
+
+<div class="discover">
+ <p> <a href="#ancre">Discover our project</a></p>
+</div>
+
+<img id="bloc2" src="http://2018.igem.org/wiki/images/5/56/T--GO_Paris-Saclay--BON2909bloc2.png" alt="bloc2">
+
+<div id="textbloc2">
+  Thanks to medicinal
+  advances, each year, drug consumption increases  to treat the population.
+  BUT
+  Downside drugs aren’t totally metabolized and accumulate gradually in wastewater
+</div>
+<a id="double_fleche" href="#ancre2"><img id="double_fleche" src="http://2018.igem.org/wiki/images/9/93/T--GO_Paris-Saclay--.double_fleche.png" alt="double_fleche"></a>
+
+<div id="ancre">o</div>
+
+
+
+<img id="bloc3" src="http://2018.igem.org/wiki/images/0/08/T--GO_Paris-Saclay--bloc3.png" alt="bloc3">
+
+<div id="ancre2">o</div>
+
+<div id="leading">Leading to...</div>
+
+<div id="antibio">Antibiotic resistance</div>
+
+<div id="vitro">In vitro human cell death</div>
+
+<div id="alter">Alter ecosystemes</div>
+
+<a id="double_fleche2" href="#ancre3"><img id="double_fleche2" src="http://2018.igem.org/wiki/images/9/93/T--GO_Paris-Saclay--.double_fleche.png" alt="double_fleche"></a>
+
+<img id="bloc4" src="http://2018.igem.org/wiki/images/6/6d/T--GO_Paris-Saclay--cartelegende.png
+" alt="bloc4">
+<div id="ancre3">o</div>
+
+<div id="texte_carte">Most of these studies have been performed under countries that already have a wastewater treatment program.
+</div>
+
+<div id="text2carte">Pharmaceuticals pollution is underated.</div>
+
+<div id="text3">Some paper, says that if no mitigation action is taken, this environmental threat will increase up to <strong>65%</strong> by 2050 for some drugs.</div>
+
+
+</div>
+
+<!-- <div class="grid-container">
   <h1 class="mat-h1"><span style="color: #62003c;">Methotr</span><span style="color:  red;">Exit</span> : a HeteroGenious Cleaning Factory</h1>
 
       <mat-card class="dashboard-card" >
@@ -32,26 +93,6 @@
                     <g id="d3bimodal" transform="translate(20,0)"></g>
                     <g id="d3bimodallegend" transform="translate(0,0)"></g>
                   </g>
-                  <!--
-                  <g id="inventory-cycle">
-                  </g>
-
-                  <g id="point-1">
-                    <rect class="first-point-rect" x="200" y="133.4" width="100" height="100"/>
-                    <text class="label" transform="matrix(1 0 0 1 200.4859 297.0509)">point 1</text>
-                  </g>
-
-                  <g id="point-2">
-                    <rect class="later-points-rect" x="392.1" y="429.2" width="38" height="144" transform="matrix(0.7071 -0.7071 0.7071 0.7071 -233.9965 437.497)"/>
-                    <text class="label" transform="matrix(0.7 -0.7 0.7 0.7 341 458)">point 2</text>
-                  </g>
-
-                  <g id="point-3">
-                    <rect class="later-points-rect" x="269" y="480.2" width="38" height="144"/>
-                    <text class="label" transform="matrix(1 0 0 1 269 472.3668)">point 3</text>
-                  </g>
-
--->
                 </svg>
 
               </div>
@@ -84,3 +125,6 @@
 
 
 </div>
+
+
+-->
