--- a/src/gops_theme.scss
+++ b/src/gops_theme.scss
@@ -1,12 +1,20 @@
+
+
 @import '../node_modules/@angular/material/theming';
 
 @import "../node_modules/angular-calendar/css/angular-calendar.css";
+
 
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
 @include mat-core();
+
+
+@import "material.min.css";
+
+
 
 $md-parissaclay-primary: (
   50 : #ece0e8,
@@ -199,3 +207,25 @@ ng-list-item  .mat-list-item:hover {
 ng-list-item .mat-divider {
   border: 0px;
 }
+
+
+h1 {
+  @extend .mat-headline;
+}
+
+h2 {
+  @extend .mat-title;
+}
+
+h3 {
+  @extend .mat-subheading-2;
+}
+
+h4 {
+  @extend .mat-subheading-1;
+}
+
+h1, h2, h3 {
+  font-weight: bolder;
+}
+
