Good progress on design integration

--- a/src/app/computing-section/computing-section.component.html
+++ b/src/app/computing-section/computing-section.component.html
@@ -1,5 +1,5 @@
-<div class="grid-container">
-  <h1 class="mat-h1">Software : Plasmid Sketcher</h1>
+<img src="http://2018.igem.org/wiki/images/2/21/T--GO_Paris-Saclay--softwarepage.png" alt="software" class="bannerimg">
+
 
   <mat-card class="dashboard-card">
     <h1>Plasmid Sketcher at a glimpse</h1>
@@ -160,4 +160,4 @@
 
 
   </mat-card>
-</div>
+
