--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
 <div class="innercontainer">
 <img id="tuyaujaune" src="http://2018.igem.org/wiki/images/7/76/T--GO_Paris-Saclay--tuyau_jaune.png"alt="tuyau jaune">
+  <img id="carre" src="http://2018.igem.org/wiki/images/5/5f/T--GO_Paris-Saclay--carre_colore.png"      alt="carres_multicolores">
 
 
 <img id="carre_blanc" src="http://2018.igem.org/wiki/images/3/38/T--GO_Paris-Saclay--carre_blanc.png"alt="carre_blanc">
@@ -11,7 +12,6 @@ http://2018.igem.org/wiki/images/2/28/T--GO_Paris-Saclay--methotrexittire.png
 <h2 id="sous_titre">Heterogen<img class="idea" src="http://2018.igem.org/wiki/images/c/c6/T--GO_Paris-Saclay--idea.png"alt="idea">ous Cleaning Factory</h2>
 
 
-<img id="carre" src="http://2018.igem.org/wiki/images/5/5f/T--GO_Paris-Saclay--carre_colore.png"      alt="carres_multicolores">
 
 <div class="discover">
  <p> <a href="#ancre">Discover our project</a></p>
@@ -56,6 +56,7 @@ http://2018.igem.org/wiki/images/2/28/T--GO_Paris-Saclay--methotrexittire.png
 
 <div id="text3">Some paper, says that if no mitigation action is taken, this environmental threat will increase up to <strong>65%</strong> by 2050 for some drugs.</div>
 
+  <br style="position: absolute; top: 1000vh">
 
 </div>
 
