--- a/src/app/support-section/support-section.component.html
+++ b/src/app/support-section/support-section.component.html
@@ -1,5 +1,9 @@
-<div class="grid-container">
-  <h1 class="mat-h1">Sponsors & Support</h1>
+<div class="bannercontainer">
+  <img src="http://2018.igem.org/wiki/images/0/03/T--GO_Paris-Saclay--fond_groupe.png" class="bannerimg superposedbanner1">
+  <img src="http://2018.igem.org/wiki/images/9/90/T--GO_Paris-Saclay--empty-banner.png" class="bannerimg superposedbanner2">
+  <div class="headlinetext">Sponsors</div>
+</div>
+
 
   <mat-card class="dashboard-card">
 
@@ -48,4 +52,4 @@
     A big thank to Herve Leh, Research Engineer at the I2BC who gave us plenty of tips at the beginning of the lab time.
 <br><br>
   </mat-card>
-</div>
+
