--- a/src/app/team-roster/team-roster.component.html
+++ b/src/app/team-roster/team-roster.component.html
@@ -1,5 +1,4 @@
-<div class="grid-container">
-  <h1 class="mat-h1">Our team</h1>
+<img src="http://2018.igem.org/wiki/images/b/ba/T--GO_Paris-Saclay--equipepage.png" class="bannerimg">
 
   <mat-card class="dashboard-card">
     <div fxLayout="row wrap" fxLayout.xs="column" fxLayoutAlign="center">
@@ -17,4 +16,4 @@
       </mat-card>
     </div>
   </mat-card>
-</div>
+
