--- a/src/app/wiki-lightproxy/wiki-lightproxy.component.html
+++ b/src/app/wiki-lightproxy/wiki-lightproxy.component.html
@@ -1,5 +1,5 @@
-<div class="grid-container">
-  <h1 class="mat-h1">Lab notebook</h1>
+<img src="http://2018.igem.org/wiki/images/0/0b/T--GO_Paris-Saclay--notebookpage.png" class="bannerimg">
+
   <mat-card class="wikilp-access-card">
     <mat-card-content class="dashboard-card-content">
 
@@ -59,4 +59,4 @@
     </mat-card-content>
   </mat-card>
 
-</div>
+
