--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,9 @@
-<!--
-/********************************* LIEN VERS LA BARRE DE NAVIGATION **************************/
--->
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400|Roboto:300,400,500">
-<!--Début du html-->
-
-
-
-<!----------------------Barre de navigation------------------------->
 
 <nav>
   <div id='cssmenu'>
     <ul>
 
-      <li><a href='#'><span>Project</span></a>
+      <li><a ><span>Project</span></a>
         <ul>
           <li><a (click)="this.routerLinkChunkProcessing('/project')" ><span>Project Design</span></a>
           </li>
@@ -20,55 +11,53 @@
           </li>
           <li ><a href='http://2018.igem.org/Team:GO_Paris-Saclay/heterogenious'><span>An heterogeneous system</span></a>
           </li>
-          <li class='has-sub'><a href='http://2018.igem.org/Team:GO_Paris-Saclay/design'><span>Design</span></a>
-          </li>
         </ul>
       </li>
 
-      <li><a href='#'><span>Lab</span></a>
+      <li><a ><span>Lab</span></a>
         <ul>
-          <li><a href='http://2018.igem.org/Team:GO_Paris-Saclay/notebook'><span>Notebook</span></a>
+          <li><a (click)="this.routerLinkChunkProcessing('/labnotebook')"><span>Notebook</span></a>
           </li>
           <li><a href='http://2018.igem.org/Team:GO_Paris-Saclay/protocols'><span>Protocols</span></a>
           </li>
         </ul>
       </li>
 
-      <li><a href='http://2018.igem.org/Team:GO_Paris-Saclay/parts'><span>Parts</span></a>
+      <li><a (click)="this.routerLinkChunkProcessing('/biology/parts')"><span>Parts</span></a>
       </li>
-      <li><a href='#'><span>Model</span></a>
+      <li><a ><span>Model</span></a>
         <ul>
           <li><a href='http://2018.igem.org/Team:GO_Paris-Saclay/model'><span>Overview</span></a>
           </li>
-          <li class='has-sub'><a href='#'><span>X</span></a>
+          <li class='has-sub'><a ><span>X</span></a>
           </li>
-          <li class='has-sub'><a href='#'><span>X</span></a>
+          <li class='has-sub'><a ><span>X</span></a>
           </li>
         </ul>
       </li>
 
-      <li><a href='#'><span>Contribution</span></a>
+      <li><a ><span>Contribution</span></a>
         <ul>
-          <li><a href='http://2018.igem.org/Team:GO_Paris-Saclay/interlab'><span>Interlab</span></a>
+          <li><a (click)="this.routerLinkChunkProcessing('/biology/interlab')"><span>Interlab</span></a>
           </li>
-          <li><a href='http://2018.igem.org/Team:GO_Paris-Saclay/software'><span>Software</span></a>
+          <li><a (click)="this.routerLinkChunkProcessing('/software')"><span>Software</span></a>
           </li>
         </ul>
       </li>
-      <li><a href='http://2018.igem.org/Team:GO_Paris-Saclay/hp'><span>Human practice</span></a></li>
+      <li><a (click)="this.routerLinkChunkProcessing('/human-practices')"><span>Human practice</span></a></li>
 
-      <li><a href='#'><span>People</span></a>
+      <li><a ><span>People</span></a>
         <ul>
-          <li><a href='http://2018.igem.org/Team:GO_Paris-Saclay/team'><span>Team</span></a>
+          <li><a (click)="this.routerLinkChunkProcessing('/team')"><span>Team</span></a>
           </li>
           <li ><a href='http://2018.igem.org/Team:GO_Paris-Saclay/collaboration'><span>Collaboration</span></a>
           </li>
         </ul>
       </li>
 
-      <li><a href='#'><span>Acknowledgement</span></a>
+      <li><a ><span>Acknowledgement</span></a>
         <ul>
-          <li ><a href='http://2018.igem.org/Team:GO_Paris-Saclay/sponsors'><span>Sponsors</span></a>
+          <li ><a (click)="this.routerLinkChunkProcessing('/support')"><span>Sponsors</span></a>
           </li>
         </ul>
       </li>
@@ -120,6 +109,7 @@
 
   <router-outlet></router-outlet>
 
+  <br style="height: 2em;">
 </div> <!-------------fin container------------->
 
 
