--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -23,13 +23,10 @@ mat-card-title{
 
 /********************************* JOUDOU THEMING FOLLOW *********************************************/
 
-@font-face {
-  font-family:"Latoregular";
-  src: url("http://2018.igem.org/wiki/images/9/94/T--Sorbonne_U_Paris--lato-regular.ttf") format('truetype');
-}
+
 
 h1, h2, h3, h4,h5,h6,p, u, li, a{
-  font-family: "Latoregular";
+  font-family: 'Lato', Helvetica, SansSerif;
 }
 
 /********************************* BLOC AVEC LE TEXT **************************/
@@ -37,7 +34,9 @@ h1, h2, h3, h4,h5,h6,p, u, li, a{
   background-color: rgb(32,56,100) !important;
   width: 100%;
   height: 100%;
+  min-height: 300vh;
 }
+
 /********************************* CSS POSITION DES IMAGES ET TEXTES PAGE PRINCIPAL **************************/
 #carre_blanc
 {
@@ -77,7 +76,7 @@ h1, h2, h3, h4,h5,h6,p, u, li, a{
 .discover
 {
   width: 11em;
-  font-size: 1.1em;
+  font-size: 1.27em;
   background-color: rgb(254,215,102);
   border-radius: 10px;
   border: 1px rgb(254,215,102);
@@ -117,7 +116,7 @@ a:hover /* Apparence au survol des liens */
   right: 300px;
   line-height: 1.2em;
   text-align: center;
-  font-family: "Latoregular";
+  font-family: 'Lato', Helvetica, SansSerif;
   z-index: 3;
 }
 
@@ -125,6 +124,7 @@ a:hover /* Apparence au survol des liens */
 {
   color: rgb(32,56,100);
   position: absolute;
+
   top: 700px;
 }
 #double_fleche
@@ -151,7 +151,7 @@ a:hover /* Apparence au survol des liens */
   top: 1560px;
   left: 80px;
   z-index: 6;
-  font-family: "Latoregular";
+  font-family: 'Lato', Helvetica, SansSerif;
 }
 #antibio
 {
@@ -163,7 +163,7 @@ a:hover /* Apparence au survol des liens */
   position: absolute;
   top: 1665px;
   left: 120px;
-  font-family: "Latoregular";
+  font-family: 'Lato', Helvetica, SansSerif;
 }
 
 #vitro
@@ -176,7 +176,7 @@ a:hover /* Apparence au survol des liens */
   position: absolute;
   top: 1890px;
   left: 130px;
-  font-family: "Latoregular";
+  font-family: 'Lato', Helvetica, SansSerif;
 }
 #alter
 {
@@ -188,7 +188,7 @@ a:hover /* Apparence au survol des liens */
   position: absolute;
   top: 1780px;
   right: 40px;
-  font-family: "Latoregular";
+  font-family: 'Lato', Helvetica, SansSerif;
 }
 
 #ancre2
@@ -199,7 +199,7 @@ a:hover /* Apparence au survol des liens */
   top: 1380px;
   left: 80px;
   z-index: 6;
-  font-family: "Latoregular";
+  font-family: 'Lato', Helvetica, SansSerif;
 }
 #double_fleche2
 {
@@ -247,7 +247,7 @@ a:hover /* Apparence au survol des liens */
   text-align: center;
   right: 30px;
   line-height: 1.2em;
-  font-family: "Latoregular";
+  font-family: 'Lato', Helvetica, SansSerif;
   z-index: 6;
 }
 
@@ -261,7 +261,7 @@ a:hover /* Apparence au survol des liens */
   text-align: center;
   right: 30px;
   line-height: 1.2em;
-  font-family: "Latoregular";
+  font-family: 'Lato', Helvetica, SansSerif;
   z-index: 6;
 }
 #text3
@@ -274,6 +274,6 @@ a:hover /* Apparence au survol des liens */
   text-align: center;
   right: 30px;
   line-height: 1.2em;
-  font-family: "Latoregular";
+  font-family: 'Lato', Helvetica, SansSerif;
   z-index: 6;
 }
