--- a/src/app/human-practice-section/human-practice-section.component.html
+++ b/src/app/human-practice-section/human-practice-section.component.html
@@ -1,7 +1,10 @@
-<div class="grid-container">
-  <h1 class="mat-h1">Human Practices</h1>
+<div class="bannercontainer">
+  <img src="http://2018.igem.org/wiki/images/0/03/T--GO_Paris-Saclay--fond_groupe.png" class="bannerimg superposedbanner1">
+  <img src="http://2018.igem.org/wiki/images/9/90/T--GO_Paris-Saclay--empty-banner.png" class="bannerimg superposedbanner2">
+  <div class="headlinetext">Human Practice</div>
+</div>
 
   <mat-card class="dashboard-card" >
 
   </mat-card>
-</div>
+
