--- a/src/app/reference-box/reference-sheet.html
+++ b/src/app/reference-box/reference-sheet.html
@@ -23,6 +23,6 @@ export class Reference {
   <mat-chip  *ngFor="let tag of this.ref.tags">{{tag}}</mat-chip>
 </mat-chip-list>
 <p>
-<a href="{{this.ref.url}}" mat-raised-button><mat-icon>open_in_new</mat-icon> Open article page</a><span style="position: absolute;
+<a  target="_blank" href="{{this.ref.url}}" mat-raised-button><mat-icon>open_in_new</mat-icon> Open article page</a><span style="position: absolute;
     right: 15px;"> <a href="#/references" mat-raised-button><mat-icon>book</mat-icon> Go to references list</a> </span>
 </p>
