--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <nav>
   <div id='cssmenu'>
     <ul>
-
+      <li><a (click)="this.routerLinkChunkProcessing('/dashboard')"><mat-icon>home</mat-icon></a></li>
       <li><a ><span>Project</span></a>
         <ul>
           <li><a (click)="this.routerLinkChunkProcessing('/project')" ><span>Project Design</span></a>
@@ -45,19 +45,12 @@
         </ul>
       </li>
       <li><a (click)="this.routerLinkChunkProcessing('/human-practices')"><span>Human practice</span></a></li>
-
-      <li><a ><span>People</span></a>
-        <ul>
-          <li><a (click)="this.routerLinkChunkProcessing('/team')"><span>Team</span></a>
-          </li>
-          <li ><a href='http://2018.igem.org/Team:GO_Paris-Saclay/collaboration'><span>Collaboration</span></a>
-          </li>
-        </ul>
-      </li>
-
       <li><a ><span>Acknowledgement</span></a>
         <ul>
           <li ><a (click)="this.routerLinkChunkProcessing('/support')"><span>Sponsors</span></a>
+          </li>
+          <li><a (click)="this.routerLinkChunkProcessing('/team')"><span>Team</span></a></li>
+          <li ><a href='http://2018.igem.org/Team:GO_Paris-Saclay/collaboration'><span>Collaboration</span></a>
           </li>
         </ul>
       </li>
